--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "classnames": "^2.3.2",
+    "eslint": "^8.36.0",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.3",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
