--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.3",
     "normalize.css": "^8.0.1",
+    "prettier": "^2.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.2",
