--- a/client/package.json
+++ b/client/package.json
@@ -13,22 +13,26 @@
     "animate.css": "^4.1.1",
     "classnames": "^2.3.2",
     "eslint": "^8.36.0",
+    "formik": "^2.2.9",
     "history": "^5.3.0",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.3",
     "normalize.css": "^8.0.1",
     "prettier": "^2.8.6",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.10.0"
   }
 }
