--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
