--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "animate.css": "^4.1.1",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "eslint": "^8.36.0",
     "formik": "^2.2.9",
