Check login email, fix relogin error, fix select error

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.36.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.3",
     "normalize.css": "^8.0.1",
