--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "eslint": "^8.36.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
